<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:text="@string/permission"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/requestPermissionAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.26"
        app:srcCompat="@drawable/ic_permission_location" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_permission"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start|end"
        android:padding="@dimen/dp_20"
        android:text="@string/error_permission_location"
        android:textColor="@color/black"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toTopOf="@+id/requestPermissionAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_permission"
        app:layout_constraintVertical_bias="0.110000014" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/requestPermissionAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:background="@drawable/button_background"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:text="@string/request_permission"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>